PNG converted to HEIC on file upload seemingly not accepted by image/* wildcard https://bugs.webkit.org/show_bug.cgi?id=303803 rdar://166124206

Reviewed by Darin Adler.

When image/*, image/heic is sent in a form with an input

<input type="file" multiple
  accept="image/*, image/heic"
  id="file">

and the file being uploaded is a PNG image. We do not want to convert it
to HEIC. We want to keep it as PNG.

* Source/WebCore/platform/graphics/cg/ImageUtilitiesCG.cpp:
(WebCore::findImagesForTranscoding):

Canonical link: https://commits.webkit.org/305283@main